--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Hlaupaprogram</h1>
     <h2> Kauptu progrommin hans </h2>
     <h3> You won't regret it </h3>
-    <p> Gunni Palli er duglegur hlaupari. </p>
+    <p> Gunni Palli er duglegur og flottur hlaupari. </p>
     <img src="http://www.fri.is/skrar/image/prufa/GunnarPall.JPG">
   </body>
 </html>
