Setja upp bootstrap

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="node_modules\bootstrap\dist\css\bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 <html>
   <head>
@@ -10,5 +11,8 @@
     <h3> You won't regret it </h3>
     <p> Gunni Palli er duglegur hlaupari. </p>
     <img src="http://www.fri.is/skrar/image/prufa/GunnarPall.JPG">
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
   </body>
 </html>
