--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
   <head>
     <title>Hlaup</title>
   </head>
+  
+    <!-- Latest compiled and minified CSS -->
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   <body>
-    <h1>Hlaupaprogram</h1>
-    <h2> Kauptu progrommin hans </h2>
+  	<div>
+    <h1 id="header">Hlaupaprogram</h1>
+    </div>
+    <h2> Kauptu progrommin hans </h2> 
     <h3> You won't regret it </h3>
     <p> Gunni Palli er duglegur og flottur hlaupari. </p>
     <img src="http://www.fri.is/skrar/image/prufa/GunnarPall.JPG">
