--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <body>
-  	<div>
-    <h1 id="header">Hlaupaprogram</h1>
-    </div>
-    <h2> Kauptu progrommin hans </h2> 
-    <h3> You won't regret it </h3>
-    <p> Gunni Palli er duglegur og flottur hlaupari. </p>
-    <img src="http://www.fri.is/skrar/image/prufa/GunnarPall.JPG">
+    <aside class="col-xs-hidden col-sm-hidden col-md-3 col-lg-3">
+    </aside>
+  	<main class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+      <h1 id="header">Hlaupaprogram</h1>
+      <h2> Kauptu progrommin hans </h2> 
+      <h3> You won't regret it </h3>
+      <p> Gunni Palli er duglegur og flottur hlaupari. </p>
+      <img src="http://www.fri.is/skrar/image/prufa/GunnarPall.JPG">
+    </main>
+    <aside class="col-xs-hidden col-sm-hidden col-md-3 col-lg-3">
+    </aside>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="node_modules\bootstrap\dist\js\bootstrap.min.js"></script>
