--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
     <aside class="col-xs-hidden col-sm-hidden col-md-3 col-lg-3">
     </aside>
   	<main class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-      <h1 id="header">Hlaupaprogram</h1>
-      <h2> Kauptu progrommin hans </h2> 
-      <h3> You won't regret it </h3>
-      <p> Gunni Palli er duglegur og flottur hlaupari. </p>
-      <img src="http://www.fri.is/skrar/image/prufa/GunnarPall.JPG">
+      <section id="intro">
+        <h1 id="header">Hlaupaprogram</h1>
+        <h2> Kauptu progrommin hans </h2> 
+        <h3> You won't regret it </h3>
+        <p> Gunni Palli er duglegur og flottur hlaupari. </p>
+        <img src="http://www.fri.is/skrar/image/prufa/GunnarPall.JPG">
+      </section>
+      <section id="about">
+        <h1>Um Gunnar</h1>
+      </section>
     </main>
     <aside class="col-xs-hidden col-sm-hidden col-md-3 col-lg-3">
     </aside>
